--- a/project1/project 5/style.css
+++ b/project1/project 5/style.css
@@ -1,32 +1,57 @@
-@media screen and (max-width: 600px) {
+@media (max-width: 555px) {
     body{
-        background-color: rgb(243, 110, 110);
-        font-family: Georgia, 'Times New Roman', Times, serif;
-         box-sizing: border-box;
-}
-header{
-    height:40px;
-}
-}
-    header {
-        background-color: #485463;
+        font-size: 10px;
     }
-       
+    header {
+        flex-direction: column;
+        text-align: center;
+        gap: 0.2em;
+    }
+    .nav-list ul {
+        flex-direction:initial;
+        text-align: center;
+        gap: auto;
+    }
+    .container {
+        flex-direction: column;
+    }
+    /* aside, main {
+        flex: 1 1 100%;
+    } */
+    .nav-bar{
+        flex-direction: column;
+        align-items: center;
+        gap: 0.1em;
+    }
+    .nav-bar ul{
+        text-align: center;
+    }
+    .container aside{
+    text-align:justify;
+    display:contents;
+    border: 1px solid black;
+    
+    }
+    .container main{
+        padding: 5px;
+        text-align:justify;
+
+    }
+}
     *{
             margin: 0;
-            padding: 0;
+            padding:0;
             font-family: Arial, sans-serif;
             font-weight: bold;
             box-sizing:border-box;
-            line-height: 1.5;
-            background-color: #bec0bb;
+            line-height: 2rem;
+            overflow-x: hidden;
         }
         header{
             display: flex;
             justify-content:space-between;
             background-color: #9b9797;
             color: rgb(49, 32, 9);
-            height: 50px;
             align-items: center;
             padding: 15px;
         }
@@ -34,4 +59,26 @@ header{
             display: flex;
             list-style: none;
             gap: 2em;
+        }
+        .nav-bar{
+            padding: 15px;
+            display: flex;
+            justify-content:space-between;
+            background-color: azure;
+        }
+        .nav-bar ul{
+            display: flex;
+            gap: 2em;
+            list-style: none;
+            
+        }
+        .container{
+            padding: 5px;
+            display: flex;
+            width: 100%;
+        }
+        .container aside{
+            width:20vw;
+            background-color: #f7ebeb;
+            padding:5px;
         }
