--- a/project1/project 6/style.css
+++ b/project1/project 6/style.css
@@ -1,51 +1,103 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Segoe UI';
-    
+    font-family: "Segoe UI";
 }
-header .nav-bar{
+
+
+
+.nav-bar{
     display: flex;
-    justify-content:space-between;
-    align-items:center  ;
-    padding: 15px;
+    justify-content:space-around;
+    padding:15px;
+    align-items: center;
 }
-.icon img{
-    width: 150px;
+.logo img{
+    width:170px;
 }
-header .nav-list ul {
+.nav-list ul{
     display: flex;
-    gap: 2em;
     list-style: none;
+    gap:2em;
 }
 .nav-list ul a{
-    text-decoration: none;
-    color: black;
+    color:black;
+    text-decoration:none ;
 }
-.container h1{
+.container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
-.container h2{
-    display: flex;
-    justify-content: center;
+.container span{
+    font-size: 42px;
+    padding:15px
 }
-.btn{
-    display: flex;
-    justify-content: center;
+.container p{
+    font-size: 25px;
+    padding: 15px;
+    width: 40vw;
+    text-align: center;
+
 }
 .btn button{
-    background-color: #17c6d3;
-    padding: 15px;
-    border-radius: 5px;
+    background-color: #51b3da;
     border:none;
-    color:aliceblue;
+    border-radius:5px;
+    padding:15px;
+    color:azure;
     font-weight: bold;
+    width:300px
+}
+.header{
+    display:flex;
+    align-items: end;
+    padding-left:25%;
+    margin-top:20px
 }
 .grid{
     display: grid;
-    grid-template-columns: 120px 120px 120px 120px 120px;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap:12px;
 }
-.item{
-    width: 50px;
+.item {
+    padding:40px;
+    background-color: #f6fafd;
+    border-radius: 10px;
+    text-align: center;
+
+
+}
+.item-eng{
+    font-weight: 700;
+    text-align: center;
+    padding-bottom: 36px;
+}
+/* .item {
+    padding: 23px;
+    background: #f9f9f9;
+    border-radius: 12px;
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+}
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap:12px
+} */
+.second {
+    max-width: 50vw;
+    margin: auto;
+}
+
+@media (max-width: 555px) {
+    body{
+        background-color: #ee5757;
+    }
+    .grid {
+        background-color: #52e44d;
+        grid-template-columns: 1fr ;
+    }
 }
