--- a/project1/project 6/1style.css
+++ b/project1/project 6/1style.css
@@ -1,13 +1,16 @@
 * {
     margin: 0;
     padding: 0;
+    max-width: 850px;
+    
 }
 
 header .nav-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px;
+    padding: 30px;
+    
 
 
 }
@@ -32,58 +35,74 @@ textarea {
     background-color: #117bf5;
     color: white;
 }
-
-.grid {
+.grid{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 3fr ;
-    gap: 15px;
-    border: 1px solid;
+    grid-template-columns: 1fr 1fr;
+    margin: 30px;
+    gap: 30px;
+    height: 300px;
 }
-
-/* .itmes{
+.grid1{
+    display: grid;
+   grid-template-columns: 1fr;
+}
+.box1{
+    /* display: flex;
+    flex-direction: column; */
     border:1px solid;
-
-} */
-.box {
-    border: 1px solid;
-    height: 250px;
-
+    border-radius: 10px;
+    padding: 15px;
+    
+    
 }
-
-.box1 {}
-
-.box2 {
-    height: 125px;
-    grid-row: 1/2;
-    grid-column: 2/2;
+.btn1{
 }
-
-.box3 {
-    height: 125px;
-    grid-column: 3/3;
-    grid-row: 1/3;
-}
-
-.box4 {
-    height: 125px;
-    grid-row:1/2;
-    grid-column: 2/2;
+.btn1 button {
+    width:100%;
+    background-color: #cc5050;
    
 }
-
-.box5 {
-    height: 125px;
-    grid-column: 3/3;
-    grid-row: 1/3;
+.grid2{
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
+    gap: 15px;
 }
+.box2{
+    border:1px solid;
+    border-radius: 10px;
+    background-color: #0b81f0;;
 
-.box6 {}
 
-.box7 {}
+}
+.grida{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin:30px;
+    gap: 30px;
 
-.box8 {}
-
-.box9 {}
-
-.box10 {}
+}
+.ram{
+    border:1px solid;
+    border-radius: 10px;
+    height: 150px;
+    background-color: #0b81f0;
+}
+.gridb{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin:30px;
+    gap: 30px;
+}
+.ramg{
+    border:1px solid;
+    border-radius: 10px;
+    height: 250px;
+    background-color: #0b81f0;
+}
+table{
+    width: 100%;
+    margin-bottom: 30px;
+}
+footer{
+    margin:30px
+}
