--- a/project1/project 7/netflixstyle.css
+++ b/project1/project 7/netflixstyle.css
@@ -1,123 +1,174 @@
-*{
+* {
     margin: 0;
-    padding: 0px;
-    background-color: #f1e9e9;
+    padding: 0;
+    background-color: #272525;
     overflow-x: auto;
     box-sizing: border-box;
     font-family: sans-serif;
+    overflow-x: hidden;
 }
-.container{
+
+.container {
     display: flex;
     flex-direction: column;
     padding: 15px;
 }
-.nav-bar{
+
+.nav-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 5px;
 }
-.nav-logo img{
+
+.nav-logo img {
     width: 180px;
 }
-.nav-btn button{
+
+.nav-btn button {
     font-size: 18px;
     padding: 8px;
     border-radius: 20px;
     background-color: #fff;
 }
-.nav-btn button a{
+
+.nav-btn button a {
     background-color: #fff;
 }
-select{
+
+select {
     background-color: #fff;
     font-size: 18px;
     padding: 8px;
     border-radius: 20px;
 }
-/* .bgc-img img{
+
+.bgc-img {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    text-align: center;
+    width: 100%;
+    height: 70vh;
+    border-radius: 35px;
+
+}
+
+.bgc-img img {
     object-fit: cover;
     object-position: center;
-    width:100%;
-    height:70vh;
-    border-radius: 35px; */
-    /* -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); */
-    /* mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); */
-    /* z-index: 100; 
-}*/
-
-.bgc-img{
-   position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    height: 70vh;
-    width:100%;
-    background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/56b4aa77-4df4-4f23-8a39-52acc5dc0efa/web_tall_panel/IN-en-20250127-TRIFECTA-perspective_e27c562f-09b3-472c-ab1d-88452e1c69ac_medium.jpg");  
-}
-.bgc-img .box1{
-    height: 70vh;
     width: 100%;
-    opacity: 0.50;
-    background-color:black;
-}
-/* .img-text{
-     position: absolute;
-    top: 30%;  
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: rgb(252, 245, 245);
+    height: auto;
+    border-radius: 35px;
+    opacity: 0.5;
 }
 
-.img-text h1 {
-    background-color:transparent;
-    font-size: 32px; 
-    font-weight: bold;
-    color: white;
+.box2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    color: rgb(255, 251, 251);
+    background: transparent;
 }
-.img-text p{ 
-    background-color: transparent;
+
+.img-h1 {
+    font-size: 50px;
     font-weight: bold;
-} */
-.start{
+    background: transparent;
+}
+
+p {
+    font-size: 20px;
+    background: transparent;
+    margin-bottom: 30px;
+}
+
+.start {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.read{
-   margin: 5px;
-   padding: 10px;
-   color: rgb(184, 189, 194);
-   font-size: 18px;
-  font-weight: lighter;
+
+.read {
+    margin: 5px;
+    padding: 10px;
+    color: rgb(184, 189, 194);
+    font-size: 18px;
+    font-weight: lighter;
 }
+
 input[type="text"],
 input {
     padding: 10px;
     border: 1px solid #696868;
     border-radius: 25px;
     background-color: #0e0b0b;
-    width:270px;
-    height:50px;
+    width: 270px;
+    height: 50px;
     font-size: 16px;
     font-weight: bold;
     color: white;
 }
-.get-start{
+
+.get-start {
     background-color: #f70b0b;
     color: white;
     font-size: 25px;
     font-weight: bold;
-    padding:10px;
+    padding: 10px;
     border-radius: 25px;
     width: 190px;
 }
-h1{
-    background-color:transparent;
-    color: white;
+
+.grid {
+    display: flex;
+    flex-direction:column;
+    width: 100%;
 }
-p{
-    background-color: transparent;
+.grid1{
+    height:250px;
+    width: 100%;
+    border: 2px solid;
+}
+.grid1 ul {
+    display:flex;
+    gap: 10px;
+    margin: 5px;
+
+}
+.grid1 ul li{
+height: 150px;
+    width: 150px;
+    border: 1px solid;
+    border-radius: 15px;
+    background-color: #fff;
+}
+
+/* .grid1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    height: 200px;
+    gap: 15px;
+    border-radius: 15px;
+}
+
+.item {
+    background-color: #a37d7d;
+    width: 150px;
+    border-radius: 15px;
+} */
+
+@media (max-width:1500px) {
+    * {
+        margin: 0;
+        padding: 0;
+        background-color: #f8f2f2;
+        box-sizing: border-box;
+    }
+
+    .bgc-img img {
+        height: 70vh
+    }
 }
