--- a/project1/project 7/netflixstyle.css
+++ b/project1/project 7/netflixstyle.css
@@ -121,54 +121,107 @@ input {
     border-radius: 25px;
     width: 190px;
 }
+.trending{
+    color: white;
+    padding-left:250px ;
+    font-size: 2em  ;
+}
 
 .grid {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
     width: 100%;
 }
-.grid1{
-    height:250px;
-    width: 100%;
-    border: 2px solid;
-}
-.grid1 ul {
-    display:flex;
-    gap: 10px;
-    margin: 5px;
 
-}
-.grid1 ul li{
-height: 150px;
-    width: 150px;
+
+.grid1 {
+    width: 100vw; 
+    padding-left: 250px;
+    padding-right: 250px;
+  }
+  
+  .grid1 ul {
+    display: flex;
+    gap: 30px; 
+    overflow-x :scroll;
+  }
+  
+  .grid1 li {
+    min-width: 180px; 
+    max-width: 250px; 
+    border-radius: 15px;
+    opacity: 0.7 ;
+  }
+  .grid1 li:hover {
+    transform: scale(1.2); 
+    z-index: 1  ;
+    opacity: 0.999;
+
+ }
+  .grid1 li a img {
+    width: 100%;
+    height: auto;
+    
+  }
+  .more h1{
+    color:white;
+    padding-left: 250px;
+    margin:15px;
+  }
+  
+.more1{
+    height: 120px;
+    width:350px;
+    margin: 10px;
     border: 1px solid;
-    border-radius: 15px;
-    background-color: #fff;
-}
+    border-radius: 20px;
+    background-color: rgb(56, 55, 55);
+    overflow-y: hidden;
 
-/* .grid1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    height: 200px;
-    gap: 15px;
-    border-radius: 15px;
 }
-
-.item {
-    background-color: #a37d7d;
-    width: 150px;
-    border-radius: 15px;
-} */
+p{
+    margin: 10px;
+    color:azure
+}
+.join{
+    padding-left: 250px;
+    padding-right: 250px;
+    display: flex;
+}
 
 @media (max-width:1500px) {
     * {
         margin: 0;
         padding: 0;
-        background-color: #f8f2f2;
+        background-color: #2c2b2b;
         box-sizing: border-box;
     }
 
     .bgc-img img {
-        height: 70vh
+        height: 70vh;
     }
+    .grid1 {
+        width: 100vw; 
+        padding-left: 25px;
+        padding-right: 25px;
+      }
+      .join{
+        display: flex;
+        flex-direction: column;
+        padding-left: 25px;
+        padding-right: 25px;
+        
+      }
+      .more1{
+        height: 120px;
+        width:100%;
+        margin: 10px;
+        border: 1px solid;
+        border-radius: 20px;
+        background-color: rgb(56, 55, 55);
+        overflow-y: hidden;
+      }
+      .more h1{
+        padding-left: 25px;
+      }
 }
